# albedo-ai

./: .gitignore  CLAUDE.md  Makefile  README.md  albedo-ai.md  electrobun.config.ts  package.json  tsconfig.json
audio-engine/: Cargo.toml  build.rs
audio-engine/examples/: debug_phonemes.rs  generate_fixture.rs  smoke_test.rs  tts_latency.rs
audio-engine/src/: audio_capture.rs  audio_playback.rs  lib.rs  lipsync.rs  loopback.rs  main.rs  phonemizer.rs  stt.rs  tts.rs  vad.rs
audio-engine/src/stt/: mod.rs  qwen3.rs  whisper.rs
audio-engine/tests/: grpc_integration.rs  grpc_synthesize.rs  grpc_tts_roundtrip.rs  latency_benchmark.rs  tts_to_wav.rs  viseme_timing.rs  wav_transcription.rs
daemon/: go.mod  go.sum
daemon/actions/: appctl.go  automation.go  browser.go  filesystem.go  filesystem_test.go  notifications.go  registry.go  registry_test.go  shell.go  shell_test.go
daemon/awareness/: clipboard.go  collector.go  collector_test.go  metrics.go  metrics_test.go  screen.go  window_linux.go  window_test.go
daemon/security/: sandbox.go  (+1 more)
docs/: phase-0-scaffold.md  phase-1-audio-mvp.md  phase-2-tts.md  phase-3-orchestrator.md  phase-4-avatar.md  phase-5-daemon.md  phase-6-integration.md  tech-lead-review.md  voice-architecture-ptbr.md
proto/: audio.proto  daemon.proto
scripts/: integration-test.ts  log-capture.sh  mock-audio-server.ts  mock-daemon-server.ts  scroll-monitor.py  setup-and-run.sh  start-mocks.ts  test-audio-rpc.ts  test-daemon-rpc.ts  test-grok.ts  test-memory.ts  test-methods.ts  test-playback.ts
src/: declarations.d.ts  rpc-schema.ts
(+47 files in other folders)
